<?xml version="1.0"?>
<package format="2">

  <name>noise_analysis</name>
  <version>1.0.0</version>
  <description>A tool for measuring and analyzing noise characteristics of data streams.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.todo">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>message_introspection</depend>
  <depend>libalglib-dev</depend>
  <depend>qtbase5-dev</depend>
  <depend>qtcharts5-dev</depend>
  <doc_depend>doxygen</doc_depend>

</package>
